--- a/source/views/Styles.view.less
+++ b/source/views/Styles.view.less
@@ -2,11 +2,15 @@
 // Colors //
 ///////////
 
-@black: #191923;
-@white: #FBFEF9;
-@blue: #0E79B2;
-@yellow: #DEB74A;
-@red: #A52F22;
+// @black: #191923;
+// @white: #FBFEF9;
+// @blue: #0E79B2;
+// @yellow: #DEB74A;
+// @red: #A52F22;
+
+@white: #f2f8fb;
+@black: #35343a;
+@gold: #baa867;
 
 /////////////////
 // Dimensions //
@@ -15,12 +19,3 @@
 @gutter: 1em;
 @roundness: 0.25em;
 @golden-ratio: 1.618;
-
-/////////////////
-// Animations //
-///////////////
-
-@keyframes fade-in {
-    0% {opacity: 0;}
-    100% {opacity: 1;}
-}
