--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -35,19 +35,24 @@ body {
     font-family: Cambria, serif;
 }
 
-.Card {
+.Deck {
     width: 8em;
     height: 12em;
     font-size: 1.2em;
+    border-radius: 0.25em;
+    background-color: @black;
+}
+
+.Card {
+    width: 8em;
+    height: 12em;
     padding: 0.3em;
+    font-size: 1.2em;
     display: inline-block;
 
-    border-width: 0.3em;
-    border-color: @gold;
-    border-style: solid;
-    border-radius: 0.25em;
-
     color: @white;
+    border-width: 0.3em;
+    border-radius: 0.25em;
     background-color: @black;
 
     &.Empty {
@@ -63,6 +68,12 @@ body {
 
             opacity: 0.5;
         }
+    }
+
+    &.Faceup {
+        border-color: @gold;
+        border-style: solid;
+        box-shadow: 0.2em 0.2em 0.2em @black;
     }
 
     .Content {
@@ -90,6 +101,7 @@ body {
 }
 
 .DivineDomainScreen {
+    @margin: 1.5rem;
     .Prompt {
         font-size: 1.5em;
         text-align: center;
@@ -97,20 +109,25 @@ body {
         margin-top: 2rem;
     }
 
-    .Cards {
+    section {
         display: flex;
         justify-content: center;
     }
 
     .YourSelectedCards {
+        .Deck {
+            margin-right: @margin;
+        }
+
         .Divider {
-            width: 1.5rem;
+            width: @margin;
             display: flex;
             align-items: center;
             justify-content: center;
 
             .Ampersand {
                 position: absolute;
+
                 font-size: 5rem;
                 text-shadow: 2px 2px 2px @black;
             }
@@ -122,7 +139,7 @@ body {
 
         .Card {
             &:not(:last-child) {
-                margin-right: 1.5rem;
+                margin-right: @margin;
             }
             &[isSelected] {
                 opacity: 0;
