--- a/source/views/Styles.view.less
+++ b/source/views/Styles.view.less
@@ -11,6 +11,9 @@
 @white: #f2f8fb;
 @black: #35343a;
 @gold: #baa867;
+@light-brown: #ac7f6c;
+@dark-brown: #4c3424;
+@faded-black: fadeout(@black, 80%);
 
 /////////////////
 // Dimensions //
