--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -38,7 +38,6 @@ body {
 .Deck {
     width: 8em;
     height: 12em;
-    font-size: 1.2em;
     position: relative;
 
     .BottomCard {
@@ -109,7 +108,6 @@ body {
     width: 8em;
     height: 12em;
     padding: 0.3em;
-    font-size: 1.2em;
     display: inline-block;
 
     color: @white;
@@ -164,6 +162,7 @@ body {
 
 .DivineDomainScreen {
     @margin: 1.5rem;
+    font-size: 1.2em;
 
     .Prompt {
         font-size: 1.5em;
@@ -183,6 +182,8 @@ body {
         }
 
         .Divider {
+            z-index: 100;
+            position: relative;
             width: @margin;
             display: flex;
             align-items: center;
@@ -193,6 +194,24 @@ body {
 
                 font-size: 5rem;
                 text-shadow: 2px 2px 2px @black;
+            }
+        }
+
+        .CardSlot {
+            width: 8em;
+            height: 12em;
+            display: inline-block;
+
+            .Card {
+                position: absolute;
+                &[isSelected] {
+                    opacity: 0;
+                    // animation-delay: 0.025s;
+                    animation-duration: 0.1s;
+                    animation-name: up-and-in;
+                    animation-fill-mode: forwards;
+                    animation-timing-function: ease-out;
+                }
             }
         }
     }
@@ -206,7 +225,34 @@ body {
             }
             &[isSelected] {
                 opacity: 0;
+
+                animation-duration: 0.05s;
+                animation-name: up-and-out;
+                animation-fill-mode: forwards;
+            }
+            &:not([isSelected]) {
+                opacity: 1;
+
+                animation-duration: 0.4s;
+                animation-name: un-up-and-out;
+                animation-fill-mode: forwards;
+                animation-timing-function: ease-out;
             }
         }
     }
+}
+
+@keyframes up-and-in {
+    0% {opacity: 0; transform: translateY(0.5em);}
+    100% {opacity: 1; transform: translateY(0em);}
+}
+
+@keyframes up-and-out {
+    0% {opacity: 1; transform: translateY(0em)}
+    100% {opacity: 0; transform: translateY(-0.5em)}
+}
+
+@keyframes un-up-and-out {
+    0% {opacity: 0; transform: translateY(-0.5em)}
+    100% {opacity: 1; transform: translateY(0em)}
 }
