--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -36,6 +36,61 @@ body {
     font-family: Cambria, serif;
 }
 
+.CopyButton {
+    position: relative;
+
+    &:hover {
+        .Icon {
+            color: @gold;
+            transition-duration: 0.1s;
+        }
+        .Response {
+            opacity: 1;
+            transition-duration: 0.1s;
+        }
+    }
+
+    .Icon {
+        font-size: 3em;
+
+        transition-property: color;
+        transition-duration: 0.2s;
+    }
+
+    .Response {
+        top: -1em;
+        display: none;
+        position: absolute;
+
+        color: @gold;
+
+        opacity: 0;
+        transition-property: opacity;
+        transition-duration: 0.2s;
+    }
+
+    &[interaction=copy] {
+        .Response {
+            top: -1.25em;
+            display: block;
+
+            animation-duration: 0.1s;
+            animation-fill-mode: forwards;
+            animation-name: copy-to-clipboard;
+        }
+    }
+
+    opacity: 0;
+    transition-duration: 0.5s;
+    transition-property: opacity;
+
+    &[hasSelectedBoth] {
+        opacity: 1;
+        transition-delay: 0.5s;
+        transition-duration: 2s;
+    }
+}
+
 .Deck {
     width: 8em;
     height: 12em;
@@ -206,7 +261,7 @@ body {
             }
         }
 
-        .SelectSlot {
+        .Slot {
             width: 8em;
             height: 12em;
             position: relative;
@@ -292,6 +347,17 @@ body {
 @keyframes select-out-from-hand {
     0% {opacity: 1; transform: translateY(-1em);}
     100% {opacity: 0; transform: translateY(-1.5em);}
+}
+
+@keyframes copy-to-clipboard {
+    0% {
+        display: block;
+        top: 1em;
+    }
+
+    100% {
+        top: -1.25em;
+    }
 }
 
 // @keyframes unselect-back-into-hand {
