--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -36,6 +36,19 @@ body {
     font-family: Cambria, serif;
 }
 
+.ReshuffleButton {
+    font-size: 3em;
+
+    color: @white;
+    transition-property: color;
+    transition-duration: 0.2s;
+
+    &:hover {
+        color: @gold;
+        transition-duration: 0.1s;
+    }
+}
+
 .CopyButton {
     position: relative;
 
@@ -133,7 +146,7 @@ body {
         align-items: center;
         justify-content: center;
 
-        font-family: tarot;
+        // font-family: tarot;
         text-shadow: 0.1em 0.1em 0.1em @black;
 
         opacity: 0;
@@ -213,7 +226,7 @@ body {
             .Name {
                 font-size: 1.33em;
                 text-align: center;
-                font-family: tarot;
+                // font-family: tarot;
             }
 
             .Symbol {
@@ -228,60 +241,68 @@ body {
     @margin: 1.5rem;
     font-size: 1.2em;
 
-    .Prompt {
+    section {
+        display: flex;
+        justify-content: center;
+        position: relative;
+    }
+
+    .PromptSection {
         font-size: 1.5em;
         text-align: center;
         margin-bottom: 2rem;
         margin-top: 2rem;
     }
 
-    section {
-        display: flex;
-        justify-content: center;
-    }
+    .SelectedCardsSection {
+        .SelectedCards {
+            .Divider {
+                z-index: 100;
+                position: relative;
+                width: @margin;
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
-    .YourSelectedCards {
-        .Deck {
-            margin-right: @margin;
-        }
+                .Ampersand {
+                    position: absolute;
 
-        .Divider {
-            z-index: 100;
-            position: relative;
-            width: @margin;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            .Ampersand {
-                position: absolute;
-
-                font-size: 5rem;
-                text-shadow: 2px 2px 2px @black;
+                    font-size: 5rem;
+                    text-shadow: 2px 2px 2px @black;
+                }
             }
-        }
 
-        .Slot {
-            width: 8em;
-            height: 12em;
-            position: relative;
-            display: inline-block;
+            .Slot {
+                width: 8em;
+                height: 12em;
+                position: relative;
+                display: inline-block;
 
-            .Card {
-                position: absolute;
+                .Card {
+                    position: absolute;
 
-                &[isSelected] {
-                    opacity: 0;
-                    animation-name: select;
-                    animation-duration: 0.1s;
-                    animation-fill-mode: forwards;
-                    animation-timing-function: ease-out;
+                    &[isSelected] {
+                        opacity: 0;
+                        animation-name: select;
+                        animation-duration: 0.1s;
+                        animation-fill-mode: forwards;
+                        animation-timing-function: ease-out;
+                    }
                 }
             }
         }
+
+        .ReshuffleSection,
+        .CopyButtonSection {
+            margin: auto @margin * 2.75;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
-    .YourDealtCards {
+    .DealtCardsSection {
         margin-top: 2rem;
 
         .Card {
