Changed the background color.

--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -29,8 +29,7 @@
 
 body {
     color: @white;
-    background-color: #111;
-    background-color: #544;
+    background-color: lighten(#35343A, 10%);
 
     font-family: Roboto, Helvetica, sans-serif;
     font-family: Cambria, serif;
