--- a/source/views/Mount.view.less
+++ b/source/views/Mount.view.less
@@ -27,6 +27,14 @@
 // Styles //
 ///////////
 
+:root {
+    font-size: 16px;
+
+    @media(max-width: 1050px) {
+        font-size: 1.53vw;
+    }
+}
+
 body {
     color: @white;
     background-color: lighten(#35343A, 10%);
